
Changes in version 0.6.7

- Updated janarate plugin to be more useful in determining ultimate event rates
- Replaced use of typeof with __typeof__ to appease c++11 compilers
- Fixed bug where event-starved processing threads chewed up CPU unneccesarily
- Fixed bug in SetNthreads call where program may exit if MAX_RELAUNCH_THREADS is 0

Changes in version 0.6.6

- JFactory::Get() and friends now catch std::exception rather than than
  JException (they still catch JException since it derives from std::exception)
- Added JResourceManager class and integrated support for it into
  JApplication and JEventLoop
- Added optional support for CURL library (used by JResourceManager)
- Added "dev" to JVersion::GetVersion() for when under development
- Fixed bugs in thread relaunching mechanism to prevent deadlocks
  and infinite recursion. (Also made default to NOT auto-relaunch).
- Made MAX_EVENTS_IN_BUFFER a configuration parameter to allow user
  to set event buffer depth
- Added callback and mutex unlock registration for when HUP sighandler
  is called
- Enhanced to allow janadot to display more than one JEventProcessor
- Janadot can draw bounding box around groups. janadot_groups.py script added
- mkplugin script updated to include more options and ROOT by default
- Cache node names in JGeometryXML to make multi-threaded startup faster
- Fixed bug with jcalibread where it printed error messages at startup
- Fixed bug in --dumpcalibrations option
- Added mutex locking to some JParameterManager methods to prevent errors
  that occurred while printing the parameters and modifying them
  simultaneously from another thread
- Fixed bug in JParameterManager that could lead to some config. params. 
  having different values for the first thread than for other threads
- Added support for CCDB
- Redfined some macros in jana_config.h to avoid name conflicts with
  other packages


Changes in version 0.6.5
